update gradle (#359)
* update gradle

* remove package from manifest bc it moved to build.gradle

* fix errors 1

but something wrong with inaccessible object

* fix errors 2

* kill deprecation warning by changing main to mainClass in cacheRoutes task

* update github actions versions

hopefully to kill the metaspace error

* fix github action java-setup, update version

* use strings in yaml for setup-java

* based on usage, use temurin instead lol

* rename step name to remove 11 in set up JDK